--- a/src/base/_coolerActivity.scss
+++ b/src/base/_coolerActivity.scss
@@ -54,17 +54,25 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-      background: var(--spotify-bg);
+      background-image: linear-gradient(
+      320deg,
+      hsl(146deg 100% 42%) 0%,
+      hsl(147deg 98% 43%) 9%,
+      hsl(147deg 96% 43%) 17%,
+      hsl(148deg 95% 44%) 26%,
+      hsl(149deg 94% 44%) 35%,
+      hsl(150deg 93% 44%) 43%,
+      hsl(152deg 93% 44%) 52%,
+      hsl(153deg 94% 44%) 61%,
+      hsl(154deg 95% 44%) 70%,
+      hsl(155deg 96% 43%) 79%,
+      hsl(156deg 98% 43%) 89%,
+      hsl(158deg 100% 42%) 100%
+      );
       position: absolute;
       top: 0;
       left: 0;
       border-radius: 6px;
-    }
-  }
-  .platformIcon-k3yytQ {
-    margin: 5px 5px 0px 0px;
-    path {
-      fill: (var(--text-color));
     }
   }
   // bots
